--- a/biblio.bib
+++ b/biblio.bib
@@ -1789,21 +1789,21 @@
 }
 
 @article{hitzler2012primer,
-  editor    = {Hitzler, Pascal and Kr{\"o}tzsch, Markus and Parsia, Bijan and Patel-Schneider, Peter F and Rudolph, Sebastian},
-  keywords  = {Model OWL Ontology},
-  title     = {{OWL 2 Web Ontology Language
-Primer (Second Edition)}},
-  url       = {https://www.w3.org/TR/owl2-primer/},
-  year      = 2012
+  editor   = {Hitzler, Pascal and Kr{\"o}tzsch, Markus and Parsia, Bijan and Patel-Schneider, Peter F and Rudolph, Sebastian},
+  keywords = {Model OWL Ontology},
+  title    = {{OWL 2 Web Ontology Language
+              Primer (Second Edition)}},
+  url      = {https://www.w3.org/TR/owl2-primer/},
+  year     = 2012
 }
 
 @article{motik2012profiles,
-  editor    = {Motik, Boris and Cuenca Grau, Bernardo and Horrocks, Ian and Wu, Zhe and Fokoue, Achille and Lutz, Carsten},
-  keywords  = {Model OWL Ontology},
-  title     = {{OWL 2 Web Ontology Language
-Profiles (Second Edition)}},
-  url       = {https://www.w3.org/TR/owl2-profiles/},
-  year      = 2012
+  editor   = {Motik, Boris and Cuenca Grau, Bernardo and Horrocks, Ian and Wu, Zhe and Fokoue, Achille and Lutz, Carsten},
+  keywords = {Model OWL Ontology},
+  title    = {{OWL 2 Web Ontology Language
+              Profiles (Second Edition)}},
+  url      = {https://www.w3.org/TR/owl2-profiles/},
+  year     = 2012
 }
 
 @article{reiter1987theory,
@@ -1885,4 +1885,57 @@ Profiles (Second Edition)}},
   year        = {2022},
   note        = {unpublished},
   institution = {Free University of Bozen-Bolzano, Italy \& University of Geneva}
+}
+
+@article{beckett2004rdf,
+  title   = {RDF/XML syntax specification (revised)},
+  author  = {Beckett, Dave and McBride, Brian},
+  journal = {W3C recommendation},
+  volume  = {10},
+  number  = {2.3},
+  year    = {2004}
+}
+
+@misc{motik2009rdf,
+  title     = {OWL 2 web ontology language mapping to RDF graphs},
+  author    = {Motik, Boris and Patel-Schneider, Peter},
+  year      = {2009},
+  publisher = {W3C Recommendation}
+}
+
+@article{beckett2008turtle,
+  title   = {Turtle - Terse RDF Triple Language},
+  author  = {Beckett, David and Berners-Lee, Tim},
+  journal = {https://www.w3.org/TeamSubmission/turtle/},
+  year    = {2011}
+}
+
+@article{horridge2009manchester,
+  title     = {OWL 2 web ontology language manchester syntax},
+  author    = {Horridge, Matthew and Patel-Schneider, Peter F},
+  journal   = {W3C Working Group Note},
+  year      = {2009},
+  publisher = {Citeseer}
+}
+
+@article{kazakov2014elk,
+  title     = {The Incredible ELK: From Polynomial Procedures to Efficient Reasoning with $\mathcal{EL}$ Ontologies},
+  author    = {Kazakov, Yevgeny and Kr{\"o}tzsch, Markus and Siman{\v{c}}{\'i}k, Franti{\v{s}}ek},
+  journal   = {Journal of automated reasoning},
+  volume    = {53},
+  number    = {1},
+  pages     = {1--61},
+  year      = {2014},
+  publisher = {Springer}
+}
+
+@article{musen2015protege,
+  title={The Prot{\'e}g{\'e} project: A look back and a look forward},
+  author={Musen, Mark A},
+  journal={AI matters},
+  volume={1},
+  number={4},
+  pages={4--12},
+  year={2015},
+  publisher={ACM New York, NY, USA}
 }
