--- a/sections/b.main/2.background.tex
+++ b/sections/b.main/2.background.tex
@@ -1,19 +1,19 @@
-\section{Ontology Bugs} \label{ontology-bugs}
+\section{The \texorpdfstring{$\SROIQ$}{SROIQ} Description Logic} \label{sroiq-def}
 
-\input{sections/b.main/2.background/1.bugs.tex}
-
-\section{The \texorpdfstring{$\mathcal{SROIQ}$}{SROIQ} Description Logic} \label{sroiq-def}
-
-\input{sections/b.main/2.background/2.sroiq.tex}
+\input{sections/b.main/2.background/1.sroiq.tex}
 
 \section{The Web Ontology Language} \label{owl-def}
 
-\input{sections/b.main/2.background/3.owl.tex}
+\input{sections/b.main/2.background/2.owl.tex}
+
+\section{Ontology Bugs} \label{ontology-bugs}
+
+\input{sections/b.main/2.background/3.bugs.tex}
 
 \section{Repairing Ontologies} \label{ontology-repair}
 
 \input{sections/b.main/2.background/4.repair.tex}
 
-\section{Axiom Weakening in \texorpdfstring{$\mathcal{ALC}$}{ALC}} \label{weakening-alc}
+\section{Axiom Weakening in \texorpdfstring{$\ALC$}{ALC}} \label{weakening-alc}
 
 \input{sections/b.main/2.background/5.weakening.tex}
