--- a/sections/b.main/3.theory.tex
+++ b/sections/b.main/3.theory.tex
@@ -6,10 +6,6 @@
 
 \input{sections/b.main/3.theory/2.rbox.tex}
 
-\section{Axiom Weakening in \texorpdfstring{$\mathcal{SROIQ}$}{SROIQ}} \label{weakening-sroiq}
+\section{Axiom Weakening in \texorpdfstring{$\SROIQ$}{SROIQ}} \label{weakening-sroiq}
 
 \input{sections/b.main/3.theory/3.weakening.tex}
-
-\section{Ensuring Correct Weakening} \label{ensure-correct}
-
-\input{sections/b.main/3.theory/4.regularity.tex}
