--- a/sections/b.main/4.implementation.tex
+++ b/sections/b.main/4.implementation.tex
@@ -1,7 +1,7 @@
-\section{Implementing \texorpdfstring{$\mathcal{SROIQ}$}{SROIQ} Weakening}
+\section{Implementing \texorpdfstring{$\SROIQ$}{SROIQ} Weakening}
 
 \input{sections/b.main/4.implementation/1.prototype.tex}
 
-\section{Axiom Weakening in Protégé}
+\section{Axiom Weakening in Protégé}\label{protege}
 
 \input{sections/b.main/4.implementation/2.protege.tex}
