--- a/sections/c.back/a.sroiq.tex
+++ b/sections/c.back/a.sroiq.tex
@@ -1,8 +1,8 @@
-\section{\texorpdfstring{$\mathcal{SROIQ}$}{SROIQ} Syntax} \label{sroiq-syntax}
+\section{\texorpdfstring{$\SROIQ$}{SROIQ} Syntax} \label{sroiq-syntax}
 
 \input{sections/c.back/a.sroiq/1.sroiq-syn.tex}
 
-\section{\texorpdfstring{$\mathcal{SROIQ}$}{SROIQ} Semantics} \label{sroiq-semantics}
+\section{\texorpdfstring{$\SROIQ$}{SROIQ} Semantics} \label{sroiq-semantics}
 
 \input{sections//c.back/a.sroiq/2.sroiq-sem.tex}
 
