--- a/sections/b.main/2.background/4.repair.tex
+++ b/sections/b.main/2.background/4.repair.tex
@@ -3,27 +3,27 @@ As established in \cref{ontology-bugs}, maintaining the consistency and correctn
 
 \subsection{Basic Definitions} \label{basic-definitions}
 
-We define a repair as proposed in \cite{baader2018making}. It is assumed, as is the case for most description logics, that there exists a monotone consequence operator $\vDash$ such that for any two ontologies $\mathcal{O}_1 \subseteq \mathcal{O}_2$ and axiom $\alpha$, $\mathcal{O}_1 \vDash \alpha$ implies $\mathcal{O}_2 \vDash \alpha$. Additionally, $\mathrm{Con}(\mathcal{O})$ shall contain all consequences of $\mathcal{O}$, that is $\mathrm{Con}(\mathcal{O}) = \{ \alpha \mid \mathcal{O} \vDash \alpha \}$. We split the ontology further into two disjoint sets $\mathcal{O} = \mathcal{O}_s \cup \mathcal{O}_r$ of \emph{static axioms} $\mathcal{O}_s$ and \emph{refutable axioms} $\mathcal{O}_r$. Static axioms are assumed to be correct and may not be touched by the repair procedure, while refutable axioms are possibly be erroneous. This separation is useful for example if the static part of the ontology is hand-crafted, while the refutable part is automatically generated. Similarly, it is applicable in case multiple ontologies are combined, and some sources are seen as less trustworthy than others.
+We define a repair as proposed in \cite{baader2018making}. It is assumed, as is the case for most description logics, that there exists a monotone consequence operator $\vDash$ such that for any two ontologies $\Omc_1 \subseteq \Omc_2$ and axiom $\alpha$, $\Omc_1 \vDash \alpha$ implies $\Omc_2 \vDash \alpha$. Additionally, $\mathrm{Con}(\Omc)$ shall contain all consequences of $\Omc$, that is $\mathrm{Con}(\Omc) = \{ \alpha \mid \Omc \vDash \alpha \}$. We split the ontology further into two disjoint sets $\Omc = \Omc_s \cup \Omc_r$ of \emph{static axioms} $\Omc_s$ and \emph{refutable axioms} $\Omc_r$. Static axioms are assumed to be correct and may not be touched by the repair procedure, while refutable axioms are possibly be erroneous. This separation is useful for example if the static part of the ontology is hand-crafted, while the refutable part is automatically generated. Similarly, it is applicable in case multiple ontologies are combined, and some sources are seen as less trustworthy than others.
 
 \begin{definition}
-Given an ontology $\mathcal{O} = \mathcal{O}_s \cup \mathcal{O}_r$ and an unintended consequence $\mathcal{O} \vDash \alpha$, $\mathcal{O}_s \not\vDash \alpha$, the ontology $\mathcal{O}_s \subseteq \mathcal{O}'$ is a \emph{repair} of $\mathcal{O}$ with respect to $\alpha$ if $\mathrm{Con}(\mathcal{O}') \subseteq \mathrm{Con}(\mathcal{O}) \setminus \{\alpha\}.$ A repair $\mathcal{O}'$ is an \emph{optimal repair} of $\mathcal{O}$ with respect to $\alpha$ if there exists no other repair $\mathcal{O}_s \subseteq \mathcal{O}''$ such that $\mathrm{Con}(\mathcal{O}') \subset \mathrm{Con}(\mathcal{O}'') \subseteq \mathrm{Con}(\mathcal{O}) \setminus \{\alpha\}$.
+Given an ontology $\Omc = \Omc_s \cup \Omc_r$ and an unintended consequence $\Omc \vDash \alpha$, $\Omc_s \not\vDash \alpha$, the ontology $\Omc_s \subseteq \Omc'$ is a \emph{repair} of $\Omc$ with respect to $\alpha$ if $\mathrm{Con}(\Omc') \subseteq \mathrm{Con}(\Omc) \setminus \{\alpha\}.$ A repair $\Omc'$ is an \emph{optimal repair} of $\Omc$ with respect to $\alpha$ if there exists no other repair $\Omc_s \subseteq \Omc''$ such that $\mathrm{Con}(\Omc') \subset \mathrm{Con}(\Omc'') \subseteq \mathrm{Con}(\Omc) \setminus \{\alpha\}$.
 \end{definition}
 
-Given that $\mathcal{O}_s \not\vDash \alpha$, a repair is guaranteed to exist, since $\mathcal{O}_s$ is one such repair. In contrast, generally an optimal repair does not need to exist.
+Given that $\Omc_s \not\vDash \alpha$, a repair is guaranteed to exist, since $\Omc_s$ is one such repair. In contrast, generally an optimal repair does not need to exist.
 
 \begin{example}
 %TODO
 \end{example}
 
-It should be noted also that there exists an infinite number of possible repairs, as adding tautologies to a repair will yield another valid repair. In the case that we are interested in making an inconsistent ontology consistent, we can use as $\alpha$ an unsatisfiable axiom, e.g., $\top \sqsubseteq \bot$. Since all axioms, including unsatisfiable axioms, are entailed by inconsistent ontologies, a repair that does not entail $\alpha$ is consistent. Notice also that in this case where $\mathcal{O}$ is inconsistent, any consistent ontology that does not entail $\alpha$, even if completely unrelated to $\mathcal{O}$, will be a repair of $\mathcal{O}$.
+It should be noted also that there exists an infinite number of possible repairs, as adding tautologies to a repair will yield another valid repair. In the case that we are interested in making an inconsistent ontology consistent, we can use as $\alpha$ an unsatisfiable axiom, e.g., $\top \sqsubseteq \bot$. Since all axioms, including unsatisfiable axioms, are entailed by inconsistent ontologies, a repair that does not entail $\alpha$ is consistent. Notice also that in this case where $\Omc$ is inconsistent, any consistent ontology that does not entail $\alpha$, even if completely unrelated to $\Omc$, will be a repair of $\Omc$.
 
-In contrast, the classical approach to repair consists of locating and removing problematic axioms. As such, a classical repair is always a subset of the original ontology and the number of classical repairs for any pair $\mathcal{O}$ and $\alpha$ is necessarily finite.
+In contrast, the classical approach to repair consists of locating and removing problematic axioms. As such, a classical repair is always a subset of the original ontology and the number of classical repairs for any pair $\Omc$ and $\alpha$ is necessarily finite.
 
 \begin{definition}
-Given an ontology $\mathcal{O} = \mathcal{O}_s \cup \mathcal{O}_r$ and an unintended consequence $\mathcal{O} \vDash \alpha$, $\mathcal{O}_s \not\vDash \alpha$, the ontology $\mathcal{O}_s \subseteq \mathcal{O}' \subseteq \mathcal{O}$ is a \emph{classical repair} of $\mathcal{O}$ with respect to $\alpha$ if $\mathrm{Con}(\mathcal{O}') \subseteq \mathrm{Con}(\mathcal{O}) \setminus \{\alpha\}.$ A classical repair $\mathcal{O}'$ is an \emph{optimal classical repair} of $\mathcal{O}$ with respect to $\alpha$ if there exists no other classical repair $\mathcal{O}_s \subseteq \mathcal{O}'' \subseteq \mathcal{O}$ such that $\mathrm{Con}(\mathcal{O}') \subset \mathrm{Con}(\mathcal{O}'') \subseteq \mathrm{Con}(\mathcal{O}) \setminus \{\alpha\}$.
+Given an ontology $\Omc = \Omc_s \cup \Omc_r$ and an unintended consequence $\Omc \vDash \alpha$, $\Omc_s \not\vDash \alpha$, the ontology $\Omc_s \subseteq \Omc' \subseteq \Omc$ is a \emph{classical repair} of $\Omc$ with respect to $\alpha$ if $\mathrm{Con}(\Omc') \subseteq \mathrm{Con}(\Omc) \setminus \{\alpha\}.$ A classical repair $\Omc'$ is an \emph{optimal classical repair} of $\Omc$ with respect to $\alpha$ if there exists no other classical repair $\Omc_s \subseteq \Omc'' \subseteq \Omc$ such that $\mathrm{Con}(\Omc') \subset \mathrm{Con}(\Omc'') \subseteq \mathrm{Con}(\Omc) \setminus \{\alpha\}$.
 \end{definition}
 
-We can observe that every classical repair is in fact a valid repair. It follows that also a classical repair is guaranteed to exist. Unlike for the general case of optimal repairs, an optimal classical repair is always guaranteed to exist. This follows from the fact that the set of classical repairs is finite, and the $\subset$ relation is a strict partial order, so there can not be an infinite sequence of classical repairs $\mathcal{O}^{(1)}, \mathcal{O}^{(2)}, \dots$  such that $\mathrm{Con}(\mathcal{O}^{(i)}) \subset \mathrm{Con}(\mathcal{O}^{(i + 1)})$.
+We can observe that every classical repair is in fact a valid repair. It follows that also a classical repair is guaranteed to exist. Unlike for the general case of optimal repairs, an optimal classical repair is always guaranteed to exist. This follows from the fact that the set of classical repairs is finite, and the $\subset$ relation is a strict partial order, so there can not be an infinite sequence of classical repairs $\Omc^{(1)}, \Omc^{(2)}, \dots$  such that $\mathrm{Con}(\Omc^{(i)}) \subset \mathrm{Con}(\Omc^{(i + 1)})$.
 
 \subsection{Repair Approaches} \label{repair-approaches}
 
@@ -32,18 +32,18 @@ We can observe that every classical repair is in fact a valid repair. It follows
 Generating a classical repair can be achieved in a number of equivalent ways. One way to compute an optimal classical repair is using justifications and hitting sets \cite{reiter1987theory}.
 
 \begin{definition}
-Given an ontology $\mathcal{O} = \mathcal{O}_s \cup \mathcal{O}_r$ and an axiom $\mathcal{O} \vDash \alpha$, $\mathcal{O}_s \not\vDash \alpha$, a \emph{justification} for $\alpha$ in $\mathcal{O}$ is a minimal subset $J \subseteq \mathcal{O}_r$ such that $J \cup \mathcal{O}_s \vDash \alpha$. Given the set of all justifications $J_1, \dots, J_n$ for $\alpha$ in $\mathcal{O}$, a \emph{hitting set} $H$ for these justifications is a set of axioms such that $H \cap J_i \not= \empty$ for $i = 1, \dots, n$. $H$ is a \emph{minimal hitting} set if it does not strictly contain another hitting set.
+Given an ontology $\Omc = \Omc_s \cup \Omc_r$ and an axiom $\Omc \vDash \alpha$, $\Omc_s \not\vDash \alpha$, a \emph{justification} for $\alpha$ in $\Omc$ is a minimal subset $J \subseteq \Omc_r$ such that $J \cup \Omc_s \vDash \alpha$. Given the set of all justifications $J_1, \dots, J_n$ for $\alpha$ in $\Omc$, a \emph{hitting set} $H$ for these justifications is a set of axioms such that $H \cap J_i \not= \empty$ for $i = 1, \dots, n$. $H$ is a \emph{minimal hitting} set if it does not strictly contain another hitting set.
 \end{definition}
 
 \begin{example}
 %TODO
 \end{example}
 
-Justifications are necessarily non-empty since $\mathcal{O}_s \not\vDash \alpha$, and therefore hitting sets and minimal hitting sets always exist. Given any minimal hitting set $H$ for the justification $J_1, \dots, J_n$ of $\alpha$ in $\mathcal{O}$, the ontology $\mathcal{O}' = \mathcal{O} \setminus H$ is an optimal classical repair of $\mathcal{O}$ with respect to $\alpha$.
+Justifications are necessarily non-empty since $\Omc_s \not\vDash \alpha$, and therefore hitting sets and minimal hitting sets always exist. Given any minimal hitting set $H$ for the justification $J_1, \dots, J_n$ of $\alpha$ in $\Omc$, the ontology $\Omc' = \Omc \setminus H$ is an optimal classical repair of $\Omc$ with respect to $\alpha$.
 
 This algorithm for computing optimal classical repairs requires the computation of all justifications, which can in general be very computationally intensive. Black-box approaches for computing justifications have been proposed \cite{kalyanpur2007finding,schlobach2003non,schlobach2007debugging} that compute justifications by repeatedly making calls to pre-existing highly-optimized reasoners. These may however, in the worst-case, need to make an exponential number of calls to the reasoner. Nevertheless, in practice they may often be fast enough, as for example the hitting set tree base algorithm presented in \cite{kalyanpur2007finding}, which conveniently can compute both all justifications and all hitting sets. There exist also glass-box approach to computing justifications \cite{kalyanpur2007finding}, that require only a single reasoning request to find justifications, but they also require specialized, generally less efficient, reasoners.
 
-An alternative to computing all justification is to directly find a minimal correction subset $C$ of $\mathcal{O}_r$ such that $\mathcal{O} \setminus C \not\vDash \alpha$. Finding a single such set can be done efficiently using similar algorithms to the ones for finding single justifications. Algorithms for solving the minimal subsets over monotone predicate problem, such as the \textsc{QuickXplain} algorithm \cite{junker2004preferred} or a progression-based algorithm \cite{marques2013minimal} may be used. A subset of all such sets can be found efficiently using the \textsc{MergeXplain} algorithm \cite{shchekotykhin2015mergexplain}. Of course, computing all minimal correction subsets directly is also possible, using similar algorithms to the ones used for computing all justifications \cite{malouf2007maximal}.
+An alternative to computing all justification is to directly find a minimal correction subset $C$ of $\Omc_r$ such that $\Omc \setminus C \not\vDash \alpha$. Finding a single such set can be done efficiently using similar algorithms to the ones for finding single justifications. Algorithms for solving the minimal subsets over monotone predicate problem, such as the \textsc{QuickXplain} algorithm \cite{junker2004preferred} or a progression-based algorithm \cite{marques2013minimal} may be used. A subset of all such sets can be found efficiently using the \textsc{MergeXplain} algorithm \cite{shchekotykhin2015mergexplain}. Of course, computing all minimal correction subsets directly is also possible, using similar algorithms to the ones used for computing all justifications \cite{malouf2007maximal}.
 
 \subsubsection{More Gentle Repairs} \label{more-gentle-repairs}
 
