--- a/sections/c.back/a.sroiq/2.sroiq-sem.tex
+++ b/sections/c.back/a.sroiq/2.sroiq-sem.tex
@@ -1,83 +1,75 @@
 \subsection{Interpretations} \label{interpretations}
 
-The semantics of $\mathcal{SROIQ}$, similar to other description logics, are defined in a model-theoretic way. Therefore, a central notion in that of the interpretations. And \emph{interpretation} $\mathcal{I} = \langle \Delta^\mathcal{I}, \cdot^\mathcal{I} \rangle$ consists of a set $\Delta^\mathcal{I}$ called the \emph{domain} of $\mathcal{I}$, and an \emph{interpretation function} $\cdot^\mathcal{I}$. The interpretation function maps the vocabulary elements as follows:
-
+The semantics of $\SROIQ$, similar to other description logics, are defined in a model-theoretic way. Therefore, a central notion in that of the interpretations. And \emph{interpretation} $\Imc = \langle \Delta^\Imc, \cdot^\Imc \rangle$ consists of a set $\Delta^\Imc$ called the \emph{domain} of $\Imc$, and an \emph{interpretation function} $\cdot^\Imc$. The interpretation function maps the vocabulary elements as follows:
 \begin{itemize}
-    \item for each individual name $a \in \mathrm{N}_I$ to an element $a^\mathcal{I} \in \Delta^\mathcal{I}$ in the domain,
-    \item for each concept name $C \in \mathrm{N}_C$ to a subset $C^\mathcal{I} \subseteq \Delta^\mathcal{I}$ of the domain, and
-    \item for each role name $r \in \mathrm{N}_R$ to a relation $r^\mathcal{I} \subseteq \Delta^\mathcal{I} \times \Delta^\mathcal{I}$ over the domain.
+    \item for each individual name $a \in \mathrm{N}_I$ to an element $a^\Imc \in \Delta^\Imc$ in the domain,
+    \item for each concept name $C \in \mathrm{N}_C$ to a subset $C^\Imc \subseteq \Delta^\Imc$ of the domain, and
+    \item for each role name $r \in \mathrm{N}_R$ to a relation $r^\Imc \subseteq \Delta^\Imc \times \Delta^\Imc$ over the domain.
 \end{itemize}
-
-An interpretation maps the universal role $u$ to $u^\mathcal{I} = \Delta^\mathcal{I} \times \Delta^\mathcal{I}$.  We extend the interpretation function to operate over inverse roles such that  $\left(r^-\right)^\mathcal{I}$ contains exactly those elements $\langle \delta_1, \delta_2 \rangle$ for which $\langle \delta_2, \delta_1 \rangle$ is contained in $r^\mathcal{I}$, that is  $\left(r^-\right)^\mathcal{I} = \{ \langle \delta_1, \delta_2 \rangle \mid \langle \delta_2, \delta_1 \rangle \in r^\mathcal{I} \}$. Further, we define the extension of the interpretation function to complex concepts inductively as follows:
-
+An interpretation maps the universal role $U$ to $U^\Imc = \Delta^\Imc \times \Delta^\Imc$. We extend the interpretation function to operate over inverse roles such that  $\left(r^-\right)^\Imc$ contains exactly those elements $\langle \delta_1, \delta_2 \rangle$ for which $\langle \delta_2, \delta_1 \rangle$ is contained in $r^\Imc$, that is  $\left(r^-\right)^\Imc = \{ \langle \delta_1, \delta_2 \rangle \mid \langle \delta_2, \delta_1 \rangle \in r^\Imc \}$. Further, we define the extension of the interpretation function to complex concepts inductively as follows:
 \begin{itemize}
-    \item The top concept is true for every individual in the domain, therefore $\top^\mathcal{I} = \Delta^\mathcal{I}$.
-    \item The bottom concept is true for no individual, hence $\bot^\mathcal{I} = \empty$ where $\empty$ represents the empty set.
-    \item Nominal concepts contain exactly the specified individuals, that is $\{ a_1, \dots, a_n \}^\mathcal{I} = \{ a_1^\mathcal{I}, \dots, a_n^\mathcal{I} \}$.
-    \item $\lnot C$ yields the complement of the extension of $C$, thus $(\lnot C)^\mathcal{I} = \Delta^\mathcal{I} \setminus C^\mathcal{I}$.
-    \item $C \sqcup D$ denotes all individuals that are in either the extension of $C$ or in that of $D$, hence $(C \sqcup D)^\mathcal{I} = C^\mathcal{I} \cup D^\mathcal{I}$.
-    \item $C \sqcap D$ on the other hand, denotes all elements of the domain that are in the extension of both $C$ and $D$, which can be expressed as $(C \sqcap D)^\mathcal{I} = C^\mathcal{I} \cap D^\mathcal{I}$.
-    \item $\exists r . C$ holds for all individuals that are connected by some element in the extension of $r$ to an individual in the extension of $C$, formally $(\exists r . C)^\mathcal{I} = \{ \delta_1 \in \Delta^\mathcal{I} \mid \exists \delta_2 \in \Delta^\mathcal{I} \, . \; \langle \delta_1, \delta_2 \rangle \in r^\mathcal{I} \, \land \, \delta_2 \in C^\mathcal{I}  \}$.
-    \item $\forall r . C$ refers to all domain elements for which all elements in the extension of $r$ connect them to elements in the extension of $C$, that is $(\forall r . C)^\mathcal{I} = \{ \delta_1 \in \Delta^\mathcal{I} \mid \forall \delta_2 \in \Delta^\mathcal{I} \, . \; \langle \delta_1, \delta_2 \rangle \in r^\mathcal{I} \to \delta_2 \in C^\mathcal{I} \}$.
-    \item $\exists r . \mathrm{Self}$ indicates all individuals that the extension of $r$ connects to themselves, hence we let $(\exists r . \mathrm{Self})^\mathcal{I} = \{ \delta \in \Delta^\mathcal{I} \mid \langle \delta, \delta \rangle \in r^\mathcal{I}\}$.
-    \item $\leq n r . C$ represents those individuals that have at most $n$ other individuals they are $r$-related to in the concept extension of $C$, that is  $(\leq n r . C)^\mathcal{I} = \{ \delta_1 \in \Delta^\mathcal{I} \mid \left| \{ \delta_2 \in \Delta^\mathcal{I} \mid \langle \delta_1, \delta_2 \rangle \in r^\mathcal{I} \, \land \; \delta_2 \in C^\mathcal{I} \} \right| \leq n \}$ where $|S|$ denotes the cardinality of a set $S$.
-    \item $\geq n r.C$ corollary to the case above indicates those domain elements that have at least $N$ such $r$-related elements, \\$(\geq n r . C)^\mathcal{I} = \{ \delta_1 \in \Delta^\mathcal{I} \mid \left| \{ \delta_2 \in \Delta^\mathcal{I} \mid \langle \delta_1, \delta_2 \rangle \in r^\mathcal{I} \, \land \; \delta_2 \in C^\mathcal{I} \} \right| \geq n \}$.
+    \item The top concept is true for every individual in the domain, therefore $\top^\Imc = \Delta^\Imc$.
+    \item The bottom concept is true for no individual, hence $\bot^\Imc = \empty$ where $\empty$ represents the empty set.
+    \item Nominal concepts contain exactly the specified individuals, that is $\{ 1 \}^\Imc = \{ i^\Imc \}$.
+    \item $\lnot C$ yields the complement of the extension of $C$, thus $(\lnot C)^\Imc = \Delta^\Imc \setminus C^\Imc$.
+    \item $C \sqcup D$ denotes all individuals that are in either the extension of $C$ or in that of $D$, hence $(C \sqcup D)^\Imc = C^\Imc \cup D^\Imc$.
+    \item $C \sqcap D$ on the other hand, denotes all elements of the domain that are in the extension of both $C$ and $D$, which can be expressed as $(C \sqcap D)^\Imc = C^\Imc \cap D^\Imc$.
+    \item $\exists R.C$ holds for all individuals that are connected by some element in the extension of $R$ to an individual in the extension of $C$, formally $(\exists R.C)^\Imc = \{ \delta_1 \in \Delta^\Imc \mid \exists \delta_2 \in \Delta^\Imc \, . \; \langle \delta_1, \delta_2 \rangle \in R^\Imc \, \land \, \delta_2 \in C^\Imc  \}$.
+    \item $\forall R.C$ refers to all domain elements for which all elements in the extension of $R$ connect them to elements in the extension of $C$, that is $(\forall R.C)^\Imc = \{ \delta_1 \in \Delta^\Imc \mid \forall \delta_2 \in \Delta^\Imc \, . \; \langle \delta_1, \delta_2 \rangle \in R^\Imc \to \delta_2 \in C^\Imc \}$.
+    \item $\exists R.\self$ indicates all individuals that the extension of $R$ connects to themselves, hence we let $(\exists R.\self)^\Imc = \{ \delta \in \Delta^\Imc \mid \langle \delta, \delta \rangle \in R^\Imc\}$.
+    \item $\less n R.C$ represents those individuals that have at most $n$ other individuals they are $R$-related to in the concept extension of $C$, that is  $(\less n R.C)^\Imc = \{ \delta_1 \in \Delta^\Imc \mid \left| \{ \delta_2 \in \Delta^\Imc \mid \langle \delta_1, \delta_2 \rangle \in R^\Imc \, \land \; \delta_2 \in C^\Imc \} \right| \less n \}$ where $|S|$ denotes the cardinality of a set $S$.
+    \item $\more n R.C$ corollary to the case above indicates those domain elements that have at least $N$ such $R$-related elements, \\$(\more n R.C)^\Imc = \{ \delta_1 \in \Delta^\Imc \mid \left| \{ \delta_2 \in \Delta^\Imc \mid \langle \delta_1, \delta_2 \rangle \in R^\Imc \, \land \; \delta_2 \in C^\Imc \} \right| \more n \}$.
 \end{itemize}
 
 \subsection{Satisfaction of Axioms} \label{satisfaction-of-axioms}
 
-The purpose of the (extended) interpretation function is mainly to determine satisfaction of axioms. We define in the following when an axiom $\alpha$ is true, or holds, in a specific interpretation $\mathcal{I}$. If this is the case, the interpretation $\mathcal{I}$ satisfies $\alpha$, written $\mathcal{I} \vDash \alpha$. If an interpretation $\mathcal{I}$ satisfies an axiom $\alpha$, we also say that $\mathcal{I}$ is a model of $\alpha$.
-
+The purpose of the (extended) interpretation function is mainly to determine satisfaction of axioms. We define in the following when an axiom $\alpha$ is true, or holds, in a specific interpretation $\Imc$. If this is the case, the interpretation $\Imc$ satisfies $\alpha$, written $\Imc \vDash \alpha$. If an interpretation $\Imc$ satisfies an axiom $\alpha$, we also say that $\Imc$ is a model of $\alpha$.
 \begin{itemize}
-    \item A role inclusion axiom $s_1 \circ \cdots \circ s_n \sqsubseteq r$ holds in $\mathcal{I}$ if and only if for each sequence $\delta_1, \dots, \delta_{n + 1} \in \Delta^\mathcal{I}$ for which $\langle \delta_i , \delta_{i + 1} \rangle \in s_i^\mathcal{I}$ for all $i = 1, \cdots, n$, also $\langle \delta_1 , \delta_n \rangle \in r^\mathcal{i}$ is satisfied. Equivalently, we can write $\mathcal{I} \vDash s_1 \circ \cdots \circ s_n \sqsubseteq r \iff s_1^\mathcal{I} \circ \cdots \circ s_n^\mathcal{I} \subseteq r^\mathcal{I}$ where $\circ$ denotes the composition of the relations.
-    \item A role reflexivity axiom $\mathrm{Ref}(r)$ hold iff for each element of the domain $\delta \in \Delta^\mathcal{I}$ the condition $\langle \delta , \delta \rangle \in r^\mathcal{I}$ is satisfied. In other words, $\mathcal{I} \vDash \mathrm{Ref}(r) \iff \{ \langle \delta, \delta \rangle \mid \delta \in \Delta^\mathcal{I} \} \subseteq r^\mathcal{I}$.
-    \item A role asymmetry axioms $\mathrm{Asy}(r)$ is holds $\mathcal{I} \vDash \mathrm{Asy}(r)$ iff $\langle \delta_1 , \delta_2 \rangle \in r^\mathcal{I}$ implies that $\langle \delta_2, \delta_1 \rangle \not\in r^\mathcal{I}$.
-    \item A role disjointness axiom $\mathrm{Dis}(s, r)$ hold iff the extensions of $r$ and $s$ are disjoint, formally $\mathcal{I} \vDash \mathrm{Dis}(s, r) \iff s^\mathrm{I} \cap r^\mathrm{I} = \empty$.
-    \item A general concept inclusion axiom $C \sqsubseteq D$ is true iff the extension of $C$ is fully contained in the extension of $D$, hence $\mathcal{I} \vDash C \sqsubseteq D \iff C^\mathcal{I} \subseteq D^\mathcal{I}$.
-    \item A concept assertion $C(a)$ holds iff the individual that $a$ is mapped to by $\cdot^\mathcal{I}$ is in the concept extension of $C$, therefore $\mathcal{I} \vDash C (a) \iff a^\mathcal{I} \in C^\mathcal{I}$.
-    \item A role assertion $r(a, b)$ holds iff the individuals denoted by the name $a$ and $b$ are connected in the extension of $r$, thus $\mathcal{I} \vDash r (a, b) \iff \langle a^\mathcal{I}, b^\mathcal{I} \rangle \in r^\mathcal{I}$.
-    \item A negative role assertion $\lnot r (a, b)$ is true exactly than when the corresponding role assertion $r (a, b)$ is false. Equivalently,  $\mathcal{I} \vDash \lnot r (a, b) \iff \langle a^\mathcal{I}, b^\mathcal{I} \rangle \not\in r^\mathcal{I}$.
-    \item An equality assertion $a = b$ holds iff the individuals identified by $a$ and $b$ are the same element of the domain, formally written $\mathcal{I} \vDash a = b \iff a^\mathcal{I} = b^\mathcal{I}$.
-    \item Dual to the above, $a \not = b$ holds iff the names $a$ and $b$ denote different elements, accordingly $\mathcal{I} \vDash a \not= b \iff a^\mathcal{I} \not= b^\mathcal{I}$.
+    \item A role inclusion axiom $S_1 \circ \cdots \circ S_n \sqsubseteq R$ holds in $\Imc$ if and only if for each sequence $\delta_1, \dots, \delta_{n + 1} \in \Delta^\Imc$ for which $\langle \delta_i , \delta_{i + 1} \rangle \in S_i^\Imc$ for all $i = 1, \cdots, n$, also $\langle \delta_1 , \delta_n \rangle \in R^\mathcal{i}$ is satisfied. Equivalently, we can write $\Imc \vDash S_1 \circ \cdots \circ S_n \sqsubseteq R \iff S_1^\Imc \circ \cdots \circ S_n^\Imc \subseteq R^\Imc$ where $\circ$ denotes the composition of the relations.
+    \item A role disjointness axiom $\disjoint(S, R)$ hold iff the extensions of $R$ and $S$ are disjoint, formally $\Imc \vDash \disjoint(S, R) \iff S^\mathrm{I} \cap R^\mathrm{I} = \empty$.
+    \item A general concept inclusion axiom $C \sqsubseteq D$ is true iff the extension of $C$ is fully contained in the extension of $D$, hence $\Imc \vDash C \sqsubseteq D \iff C^\Imc \subseteq D^\Imc$.
+    \item A concept assertion $C(a)$ holds iff the individual that $a$ is mapped to by $\cdot^\Imc$ is in the concept extension of $C$, therefore $\Imc \vDash C (a) \iff a^\Imc \in C^\Imc$.
+    \item A role assertion $R(a, b)$ holds iff the individuals denoted by the name $a$ and $b$ are connected in the extension of $R$, thus $\Imc \vDash R(a, b) \iff \langle a^\Imc, b^\Imc \rangle \in R^\Imc$.
+    \item A negative role assertion $\lnot R(a, b)$ is true exactly than when the corresponding role assertion $R(a, b)$ is false. Equivalently, $\Imc \vDash \lnot R(a, b) \iff \langle a^\Imc, b^\Imc \rangle \not\in R^\Imc$.
+    \item An equality assertion $a = b$ holds iff the individuals identified by $a$ and $b$ are the same element of the domain, formally written $\Imc \vDash a = b \iff a^\Imc = b^\Imc$.
+    \item Dual to the above, $a \not = b$ holds iff the names $a$ and $b$ denote different elements, accordingly $\Imc \vDash a \not= b \iff a^\Imc \not= b^\Imc$.
 \end{itemize}
-
-We say a set of axioms holds in an interpretation $\mathcal{I}$ iff every axiom of the set hold in $\mathcal{I}$. Accordingly, $\mathcal{I}$ satisfies a knowledge base $\mathcal{KB}$, written $\mathcal{I} \vDash \mathcal{KB}$, iff $\mathcal{I}$ satisfies every axiom $\alpha \in \mathcal{KB}$ of the knowledge base, i.e., $\mathcal{I} \vDash \mathcal{KB} \iff \forall \alpha \in \mathcal{KB} \, . \; \mathcal{I} \vDash \alpha$. If $\mathcal{I}$ satisfies $\mathcal{KB}$, we say $\mathcal{I}$ is a model of $\mathcal{KB}$.
+We say a set of axioms holds in an interpretation $\Imc$ iff every axiom of the set hold in $\Imc$. Accordingly, $\Imc$ satisfies a ontology $\Omc$, written $\Imc \vDash \Omc$, iff $\Imc$ satisfies every axiom $\alpha \in \Omc$ of the ontology, i.e., $\Imc \vDash \Omc \iff \forall \alpha \in \Omc \, . \; \Imc \vDash \alpha$. If $\Imc$ satisfies $\Omc$, we say $\Imc$ is a model of $\Omc$.
 
 \subsection{Reasoning tasks} \label{reasoning-tasks}
 
-In general, logic-based knowledge representation is useful for the ability to perform reasoning task on knowledge bases. There are a number of reasoning tasks that can be performed by a reasoner in description logics. In this section, we will take a look at three basic reasoning tasks, and how they can be reduced to each other. While there exists other reasoning task, this section will focus on \emph{knowledge base satisfiability,} \emph{axiom entailment, and concept satisfiability}.
+In general, logic-based knowledge representation is useful for the ability to perform reasoning task on ontologys. There are a number of reasoning tasks that can be performed by a reasoner in description logics. In this section, we will take a look at three basic reasoning tasks, and how they can be reduced to each other. While there exists other reasoning task, this section will focus on \emph{ontology satisfiability,} \emph{axiom entailment, and concept satisfiability}.
 
 \subsubsection{Knowledge base satisfiability} \label{knowledge-base-satisfiability}
 
-A knowledge $\mathcal{KB}$ base is satisfiable iff there exists a model $\mathcal{I} \vDash \mathcal{KB}$ for $\mathcal{KB}$. Otherwise, the knowledge base is called unsatisfiable, inconsistent, or contradictory. As discussed in \cref{ontology-bugs}, an inconsistent knowledge base can be a sign of modelling errors. An inconsistent knowledge base entailed every statement, and as such all information extracted from it is useless. Therefore, an unsatisfiable knowledge base is generally undesirable. Furthermore, both the task of deciding concept satisfiability and axiom entailment can be reduced to deciding knowledge base consistency.
+A knowledge $\Omc$ base is satisfiable iff there exists a model $\Imc \vDash \Omc$ for $\Omc$. Otherwise, the ontology is called unsatisfiable, inconsistent, or contradictory. As discussed in \cref{ontology-bugs}, an inconsistent ontology can be a sign of modelling errors. An inconsistent ontology entailed every statement, and as such all information extracted from it is useless. Therefore, an unsatisfiable ontology is generally undesirable. Furthermore, both the task of deciding concept satisfiability and axiom entailment can be reduced to deciding ontology consistency.
 
 \subsubsection{Axiom entailment} \label{axiom-entailment}
 
-An axiom $\alpha$ is entailed by $\mathcal{KB}$ if every model $\mathcal{I} \vDash \mathcal{KB}$ of the knowledge base also satisfies the axiom $\mathcal{I} \vDash \alpha$. We also write this as $\mathcal{KB} \vDash \alpha$ and say that $\alpha$ is a consequence of $\mathcal{KB}$. Deciding axiom entailment is an important task in order to derive new information from the collected knowledge. If $\alpha$ is entailed by the empty knowledge base, $\alpha$ is said to be a \emph{tautology}. Further, the \emph{set of consequences} of $\mathcal{KB}$ if the set of all axioms which are entailed by $\mathcal{KB}$, we write $\mathrm{Con}(\mathcal{KB}) = \{ \alpha \mid \mathcal{KB} \vDash \alpha \}.$ It is clear that the set of consequences will always be infinite, since there is an infinite number of tautologies.
+An axiom $\alpha$ is entailed by $\Omc$ if every model $\Imc \vDash \Omc$ of the ontology also satisfies the axiom $\Imc \vDash \alpha$. We also write this as $\Omc \vDash \alpha$ and say that $\alpha$ is a consequence of $\Omc$. Deciding axiom entailment is an important task in order to derive new information from the collected knowledge. If $\alpha$ is entailed by the empty ontology, $\alpha$ is said to be a \emph{tautology}. Further, the \emph{set of consequences} of $\Omc$ if the set of all axioms which are entailed by $\Omc$, we write $\mathrm{Con}(\Omc) = \{ \alpha \mid \Omc \vDash \alpha \}.$ It is clear that the set of consequences will always be infinite, since there is an infinite number of tautologies.
 
-The problem of axiom entailment can be reduced to determining for the satisfiability of a modified knowledge base. This is achieved by using an axiom $\beta$ that imposes the opposite restriction to $\alpha$, to be more precise, for all interpretations $\mathcal{I} \vDash \alpha \iff \mathcal{I} \not\vDash \beta$. If $\alpha$ is entailed by $\mathcal{KB}$, it must hold in every model of $\mathcal{KB}$, hence $\beta$ must not hold in any model. It follows that the extended knowledge base $\mathcal{KB} \cup \{ \, \beta \, \}$ has no new model, and is therefore unsatisfiable. We can consequently solve the axiom entailment problem by testing for satisfiability of a modified knowledge base, if we can find such an opposing axiom for $\alpha$. For some cases in $\mathcal{SROIQ}$ finding such an opposite is obvious, for others the desired behaviour must be emulated with a set of axioms. \Cref{tab:entailment-reduction} shows the correspondence for every type of $\mathcal{SROIQ}$ axiom.
-
+The problem of axiom entailment can be reduced to determining for the satisfiability of a modified ontology. This is achieved by using an axiom $\beta$ that imposes the opposite restriction to $\alpha$, to be more precise, for all interpretations $\Imc \vDash \alpha \iff \Imc \not\vDash \beta$. If $\alpha$ is entailed by $\Omc$, it must hold in every model of $\Omc$, hence $\beta$ must not hold in any model. It follows that the extended ontology $\Omc \cup \{ \, \beta \, \}$ has no new model, and is therefore unsatisfiable. We can consequently solve the axiom entailment problem by testing for satisfiability of a modified ontology, if we can find such an opposing axiom for $\alpha$. For some cases in $\SROIQ$ finding such an opposite is obvious, for others the desired behaviour must be emulated with a set of axioms. \Cref{tab:entailment-reduction} shows the correspondence for every type of $\SROIQ$ axiom.
 \begin{table}
 \begin{center}
 \begin{tabular}{l|l}
     $\alpha$ & $B$ \\
     \hline
-    $s_1 \circ \cdots \circ s_n \sqsubseteq r$ & $s_1(a_1, a_2)$, $\dots$, $s_n(a_n, a_{n + 1})$, and $\lnot r(a_1, a_{n + 1})$ \\
-    $\mathrm{Dis}(s, r)$ & $s(a, b)$ and $r(a, b)$ \\
+    $S_1 \circ \cdots \circ S_n \sqsubseteq R$ & $S_1(a_1, a_2)$, $\dots$, $S_n(a_n, a_{n + 1})$, and $\lnot R(a_1, a_{n + 1})$ \\
+    $\disjoint(S, R)$ & $S(a, b)$ and $R(a, b)$ \\
     $C \sqsubseteq D$ & $(C \sqcap \lnot D)(a)$ \\
-    $C (a)$ & $\lnot C (a)$ \\
-    $r (a, b)$ & $\lnot r(a, b)$ \\
-    $\lnot r (a, b)$ & $r (a, b)$ \\
+    $C(a)$ & $\lnot C(a)$ \\
+    $R(a, b)$ & $\lnot R(a, b)$ \\
+    $\lnot R(a, b)$ & $R(a, b)$ \\
     $a = b$ & $a \not= b$ \\
     $a \not= b$ & $a = b$ \\
 \end{tabular}
 \end{center}
 \label{tab:entailment-reduction}
-\caption[Axioms substitution for reducing entailment to satisfiability]{The axioms in $B$ together have the “opposite” meaning of those in $\alpha$. This means, checking entailment of $\alpha$ with respect to $\mathcal{KB}$, is equivalent to checking unsatisfiability of $\mathcal{KB} \cup B$. $a$, $a_i$, and $b$ are assumed to not appear in $\mathcal{KB}$.}
+\caption[Axioms substitution for reducing entailment to satisfiability]{The axioms in $B$ together have the “opposite” meaning of those in $\alpha$. This means, checking entailment of $\alpha$ with respect to $\Omc$, is equivalent to checking unsatisfiability of $\Omc \cup B$. $a$, $a_i$, and $b$ are assumed to not appear in $\Omc$.}
 \end{table}
 
 \subsubsection{Concept satisfiability} \label{concept-satisfiability}
 
-A concept $C$ is satisfiable with respect to $\mathcal{KB}$ iff there exists a model of the knowledge base $\mathcal{I} \vDash \mathcal{KB}$ such that the extension of $C$ is not empty, i.e., $C^\mathcal{I} \not= \empty$. A concept which is not satisfiable is called unsatisfiable. Clearly, some concepts are unsatisfiable with respect to every knowledge base, for example $\bot$ or $A \sqcap \lnot A$. However, similar to an unsatisfiable knowledge base, an unsatisfiable atomic concept may be an indication of a modelling mistake.
+A concept $C$ is satisfiable with respect to $\Omc$ iff there exists a model of the ontology $\Imc \vDash \Omc$ such that the extension of $C$ is not empty, i.e., $C^\Imc \not= \empty$. A concept which is not satisfiable is called unsatisfiable. Clearly, some concepts are unsatisfiable with respect to every ontology, for example $\bot$ or $A \sqcap \lnot A$. However, similar to an unsatisfiable ontology, an unsatisfiable atomic concept may be an indication of a modelling mistake.
 
-Like axiom entailment, concept satisfiability can be reduced to knowledge base satisfiability. If a concept is unsatisfiable, every model $\mathcal{I} \vDash \mathcal{KB}$ maps the concept to the empty set, that is $C^\mathcal{I} = \empty$. Since the other direction is trivial, we can rewrite this as $C^\mathcal{I} \subseteq \empty$. It follows that since $\bot^\mathcal{I} = \empty$ the every such model satisfies $\mathcal{I} \vDash C \sqsubseteq \bot$, meaning $\mathcal{KB} \vDash C \sqsubseteq \bot$. We conclude that we can test for unsatisfiability of a concept $C$ by checking for entailment of $C \sqsubseteq \bot$.
+Like axiom entailment, concept satisfiability can be reduced to ontology satisfiability. If a concept is unsatisfiable, every model $\Imc \vDash \Omc$ maps the concept to the empty set, that is $C^\Imc = \empty$. Since the other direction is trivial, we can rewrite this as $C^\Imc \subseteq \empty$. It follows that since $\bot^\Imc = \empty$ the every such model satisfies $\Imc \vDash C \sqsubseteq \bot$, meaning $\Omc \vDash C \sqsubseteq \bot$. We conclude that we can test for unsatisfiability of a concept $C$ by checking for entailment of $C \sqsubseteq \bot$.
