--- a/sections/c.back/b.owl2weakening.tex
+++ b/sections/c.back/b.owl2weakening.tex
@@ -30,7 +30,7 @@ For OWL 2 DL we must follow the same restrictions, when it comes to regularity a
 \end{align*}
 }
 
-Using this abstract refinement operator, we build two concrete refinement operators, a generalization operator $\gamma_{\Omcref,\Omcfull} = \zeta_{\UpC_{\Omcref,\Omcfull}, \DownC_\mathrm{O}}$ and a specialization operator $\rho_{\Omcref,\Omcfull} = \zeta_{\DownC_{\Omcref,\Omcfull}, \UpC_{\Omcref,\Omcfull}}$. Using these generalization and specialization operators, we then define the axiom weakening operator $g_{\Omcref,\Omcfull}$ for OWL 2 DL axioms as follows:
+Using this abstract refinement operator, we build two concrete refinement operators, a generalization operator $\gamma_{\Omcref,\Omcfull} = \zeta_{\UpC_{\Omcref,\Omcfull}, \DownC_\mathrm{O}}$ and a specialization operator $\rho_{\Omcref,\Omcfull} = \zeta_{\DownC_{\Omcref,\Omcfull}, \UpC_{\Omcref,\Omcfull}}$. Using these generalization and specialization operators, we then define the axiom weakening operator $g_{\Omcref,\Omcfull}$ for OWL 2 DL axioms as follows. Note that the axiom $\bot \sqsubseteq \top$ is not actually an OWL 2 axioms, but stands in for some tautological axiom that is true in every possible interpretations.
 
 {\scriptsize
 \begin{align*}
