--- a/sections/c.back/a.sroiq/2.sroiq-sem.tex
+++ b/sections/c.back/a.sroiq/2.sroiq-sem.tex
@@ -21,20 +21,24 @@ An interpretation maps the universal role $U$ to $U^\Imc = \Delta^\Imc \times \D
     \item $\more n R.C$ corollary to the case above indicates those domain elements that have at least $N$ such $R$-related elements, \\$(\more n R.C)^\Imc = \{ \delta_1 \in \Delta^\Imc \mid \left| \{ \delta_2 \in \Delta^\Imc \mid \langle \delta_1, \delta_2 \rangle \in R^\Imc \, \land \; \delta_2 \in C^\Imc \} \right| \more n \}$.
 \end{itemize}
 
+\begin{example}
+% TODO
+\end{example}
+
 \subsection{Satisfaction of Axioms} \label{satisfaction-of-axioms}
 
-The purpose of the (extended) interpretation function is mainly to determine satisfaction of axioms. We define in the following when an axiom $\alpha$ is true, or holds, in a specific interpretation $\Imc$. If this is the case, the interpretation $\Imc$ satisfies $\alpha$, written $\Imc \vDash \alpha$. If an interpretation $\Imc$ satisfies an axiom $\alpha$, we also say that $\Imc$ is a model of $\alpha$.
+The purpose of the (extended) interpretation function is mainly to determine satisfaction of axioms. We define in the following when an axiom $\alpha$ is true, or holds, in a specific interpretation $\Imc$. If this is the case, the interpretation $\Imc$ satisfies $\alpha$, written $\Imc \models \alpha$. If an interpretation $\Imc$ satisfies an axiom $\alpha$, we also say that $\Imc$ is a model of $\alpha$.
 \begin{itemize}
-    \item A role inclusion axiom $S_1 \circ \cdots \circ S_n \sqsubseteq R$ holds in $\Imc$ if and only if for each sequence $\delta_1, \dots, \delta_{n + 1} \in \Delta^\Imc$ for which $\langle \delta_i , \delta_{i + 1} \rangle \in S_i^\Imc$ for all $i = 1, \cdots, n$, also $\langle \delta_1 , \delta_n \rangle \in R^\mathcal{i}$ is satisfied. Equivalently, we can write $\Imc \vDash S_1 \circ \cdots \circ S_n \sqsubseteq R \iff S_1^\Imc \circ \cdots \circ S_n^\Imc \subseteq R^\Imc$ where $\circ$ denotes the composition of the relations.
-    \item A role disjointness axiom $\disjoint(S, R)$ hold iff the extensions of $R$ and $S$ are disjoint, formally $\Imc \vDash \disjoint(S, R) \iff S^\mathrm{I} \cap R^\mathrm{I} = \empty$.
-    \item A general concept inclusion axiom $C \sqsubseteq D$ is true iff the extension of $C$ is fully contained in the extension of $D$, hence $\Imc \vDash C \sqsubseteq D \iff C^\Imc \subseteq D^\Imc$.
-    \item A concept assertion $C(a)$ holds iff the individual that $a$ is mapped to by $\cdot^\Imc$ is in the concept extension of $C$, therefore $\Imc \vDash C (a) \iff a^\Imc \in C^\Imc$.
-    \item A role assertion $R(a, b)$ holds iff the individuals denoted by the name $a$ and $b$ are connected in the extension of $R$, thus $\Imc \vDash R(a, b) \iff \langle a^\Imc, b^\Imc \rangle \in R^\Imc$.
-    \item A negative role assertion $\lnot R(a, b)$ is true exactly than when the corresponding role assertion $R(a, b)$ is false. Equivalently, $\Imc \vDash \lnot R(a, b) \iff \langle a^\Imc, b^\Imc \rangle \not\in R^\Imc$.
-    \item An equality assertion $a = b$ holds iff the individuals identified by $a$ and $b$ are the same element of the domain, formally written $\Imc \vDash a = b \iff a^\Imc = b^\Imc$.
-    \item Dual to the above, $a \not = b$ holds iff the names $a$ and $b$ denote different elements, accordingly $\Imc \vDash a \not= b \iff a^\Imc \not= b^\Imc$.
+    \item A role inclusion axiom $S_1 \circ \cdots \circ S_n \sqsubseteq R$ holds in $\Imc$ if and only if for each sequence $\delta_1, \dots, \delta_{n + 1} \in \Delta^\Imc$ for which $\langle \delta_i , \delta_{i + 1} \rangle \in S_i^\Imc$ for all $i = 1, \cdots, n$, also $\langle \delta_1 , \delta_n \rangle \in R^\mathcal{i}$ is satisfied. Equivalently, we can write $\Imc \models S_1 \circ \cdots \circ S_n \sqsubseteq R \iff S_1^\Imc \circ \cdots \circ S_n^\Imc \subseteq R^\Imc$ where $\circ$ denotes the composition of the relations.
+    \item A role disjointness axiom $\disjoint(S, R)$ hold iff the extensions of $R$ and $S$ are disjoint, formally $\Imc \models \disjoint(S, R) \iff S^\mathrm{I} \cap R^\mathrm{I} = \empty$.
+    \item A general concept inclusion axiom $C \sqsubseteq D$ is true iff the extension of $C$ is fully contained in the extension of $D$, hence $\Imc \models C \sqsubseteq D \iff C^\Imc \subseteq D^\Imc$.
+    \item A concept assertion $C(a)$ holds iff the individual that $a$ is mapped to by $\cdot^\Imc$ is in the concept extension of $C$, therefore $\Imc \models C (a) \iff a^\Imc \in C^\Imc$.
+    \item A role assertion $R(a, b)$ holds iff the individuals denoted by the name $a$ and $b$ are connected in the extension of $R$, thus $\Imc \models R(a, b) \iff \langle a^\Imc, b^\Imc \rangle \in R^\Imc$.
+    \item A negative role assertion $\lnot R(a, b)$ is true exactly than when the corresponding role assertion $R(a, b)$ is false. Equivalently, $\Imc \models \lnot R(a, b) \iff \langle a^\Imc, b^\Imc \rangle \not\in R^\Imc$.
+    \item An equality assertion $a = b$ holds iff the individuals identified by $a$ and $b$ are the same element of the domain, formally written $\Imc \models a = b \iff a^\Imc = b^\Imc$.
+    \item Dual to the above, $a \not = b$ holds iff the names $a$ and $b$ denote different elements, accordingly $\Imc \models a \not= b \iff a^\Imc \not= b^\Imc$.
 \end{itemize}
-We say a set of axioms holds in an interpretation $\Imc$ iff every axiom of the set hold in $\Imc$. Accordingly, $\Imc$ satisfies a ontology $\Omc$, written $\Imc \vDash \Omc$, iff $\Imc$ satisfies every axiom $\alpha \in \Omc$ of the ontology, i.e., $\Imc \vDash \Omc \iff \forall \alpha \in \Omc \, . \; \Imc \vDash \alpha$. If $\Imc$ satisfies $\Omc$, we say $\Imc$ is a model of $\Omc$.
+We say a set of axioms holds in an interpretation $\Imc$ iff every axiom of the set hold in $\Imc$. Accordingly, $\Imc$ satisfies a ontology $\Omc$, written $\Imc \models \Omc$, iff $\Imc$ satisfies every axiom $\alpha \in \Omc$ of the ontology, i.e., $\Imc \models \Omc \iff \forall \alpha \in \Omc \, . \; \Imc \models \alpha$. If $\Imc$ satisfies $\Omc$, we say $\Imc$ is a model of $\Omc$.
 
 \subsection{Reasoning tasks} \label{reasoning-tasks}
 
@@ -42,13 +46,13 @@ In general, logic-based knowledge representation is useful for the ability to pe
 
 \subsubsection{Knowledge base satisfiability} \label{knowledge-base-satisfiability}
 
-A knowledge $\Omc$ base is satisfiable iff there exists a model $\Imc \vDash \Omc$ for $\Omc$. Otherwise, the ontology is called unsatisfiable, inconsistent, or contradictory. As discussed in \cref{ontology-bugs}, an inconsistent ontology can be a sign of modelling errors. An inconsistent ontology entailed every statement, and as such all information extracted from it is useless. Therefore, an unsatisfiable ontology is generally undesirable. Furthermore, both the task of deciding concept satisfiability and axiom entailment can be reduced to deciding ontology consistency.
+A knowledge $\Omc$ base is satisfiable iff there exists a model $\Imc \models \Omc$ for $\Omc$. Otherwise, the ontology is called unsatisfiable, inconsistent, or contradictory. As discussed in \cref{ontology-bugs}, an inconsistent ontology can be a sign of modelling errors. An inconsistent ontology entailed every statement, and as such all information extracted from it is useless. Therefore, an unsatisfiable ontology is generally undesirable. Furthermore, both the task of deciding concept satisfiability and axiom entailment can be reduced to deciding ontology consistency.
 
 \subsubsection{Axiom entailment} \label{axiom-entailment}
 
-An axiom $\alpha$ is entailed by $\Omc$ if every model $\Imc \vDash \Omc$ of the ontology also satisfies the axiom $\Imc \vDash \alpha$. We also write this as $\Omc \vDash \alpha$ and say that $\alpha$ is a consequence of $\Omc$. Deciding axiom entailment is an important task in order to derive new information from the collected knowledge. If $\alpha$ is entailed by the empty ontology, $\alpha$ is said to be a \emph{tautology}. Further, the \emph{set of consequences} of $\Omc$ if the set of all axioms which are entailed by $\Omc$, we write $\mathrm{Con}(\Omc) = \{ \alpha \mid \Omc \vDash \alpha \}.$ It is clear that the set of consequences will always be infinite, since there is an infinite number of tautologies.
+An axiom $\alpha$ is entailed by $\Omc$ if every model $\Imc \models \Omc$ of the ontology also satisfies the axiom $\Imc \models \alpha$. We also write this as $\Omc \models \alpha$ and say that $\alpha$ is a consequence of $\Omc$. Deciding axiom entailment is an important task in order to derive new information from the collected knowledge. If $\alpha$ is entailed by the empty ontology, $\alpha$ is said to be a \emph{tautology}. Further, the \emph{set of consequences} of $\Omc$ if the set of all axioms which are entailed by $\Omc$, we write $\mathrm{Con}(\Omc) = \{ \alpha \mid \Omc \models \alpha \}.$ It is clear that the set of consequences will always be infinite, since there is an infinite number of tautologies.
 
-The problem of axiom entailment can be reduced to determining for the satisfiability of a modified ontology. This is achieved by using an axiom $\beta$ that imposes the opposite restriction to $\alpha$, to be more precise, for all interpretations $\Imc \vDash \alpha \iff \Imc \not\vDash \beta$. If $\alpha$ is entailed by $\Omc$, it must hold in every model of $\Omc$, hence $\beta$ must not hold in any model. It follows that the extended ontology $\Omc \cup \{ \, \beta \, \}$ has no new model, and is therefore unsatisfiable. We can consequently solve the axiom entailment problem by testing for satisfiability of a modified ontology, if we can find such an opposing axiom for $\alpha$. For some cases in $\SROIQ$ finding such an opposite is obvious, for others the desired behaviour must be emulated with a set of axioms. \Cref{tab:entailment-reduction} shows the correspondence for every type of $\SROIQ$ axiom.
+The problem of axiom entailment can be reduced to determining for the satisfiability of a modified ontology. This is achieved by using an axiom $\beta$ that imposes the opposite restriction to $\alpha$, to be more precise, for all interpretations $\Imc \models \alpha \iff \Imc \not\models \beta$. If $\alpha$ is entailed by $\Omc$, it must hold in every model of $\Omc$, hence $\beta$ must not hold in any model. It follows that the extended ontology $\Omc \cup \{ \, \beta \, \}$ has no new model, and is therefore unsatisfiable. We can consequently solve the axiom entailment problem by testing for satisfiability of a modified ontology, if we can find such an opposing axiom for $\alpha$. For some cases in $\SROIQ$ finding such an opposite is obvious, for others the desired behaviour must be emulated with a set of axioms. \Cref{tab:entailment-reduction} shows the correspondence for every type of $\SROIQ$ axiom.
 \begin{table}
 \begin{center}
 \begin{tabular}{l|l}
@@ -70,6 +74,6 @@ The problem of axiom entailment can be reduced to determining for the satisfiabi
 
 \subsubsection{Concept satisfiability} \label{concept-satisfiability}
 
-A concept $C$ is satisfiable with respect to $\Omc$ iff there exists a model of the ontology $\Imc \vDash \Omc$ such that the extension of $C$ is not empty, i.e., $C^\Imc \not= \empty$. A concept which is not satisfiable is called unsatisfiable. Clearly, some concepts are unsatisfiable with respect to every ontology, for example $\bot$ or $A \sqcap \lnot A$. However, similar to an unsatisfiable ontology, an unsatisfiable atomic concept may be an indication of a modelling mistake.
+A concept $C$ is satisfiable with respect to $\Omc$ iff there exists a model of the ontology $\Imc \models \Omc$ such that the extension of $C$ is not empty, i.e., $C^\Imc \not= \empty$. A concept which is not satisfiable is called unsatisfiable. Clearly, some concepts are unsatisfiable with respect to every ontology, for example $\bot$ or $A \sqcap \lnot A$. However, similar to an unsatisfiable ontology, an unsatisfiable atomic concept may be an indication of a modelling mistake.
 
-Like axiom entailment, concept satisfiability can be reduced to ontology satisfiability. If a concept is unsatisfiable, every model $\Imc \vDash \Omc$ maps the concept to the empty set, that is $C^\Imc = \empty$. Since the other direction is trivial, we can rewrite this as $C^\Imc \subseteq \empty$. It follows that since $\bot^\Imc = \empty$ the every such model satisfies $\Imc \vDash C \sqsubseteq \bot$, meaning $\Omc \vDash C \sqsubseteq \bot$. We conclude that we can test for unsatisfiability of a concept $C$ by checking for entailment of $C \sqsubseteq \bot$.
+Like axiom entailment, concept satisfiability can be reduced to ontology satisfiability. If a concept is unsatisfiable, every model $\Imc \models \Omc$ maps the concept to the empty set, that is $C^\Imc = \empty$. Since the other direction is trivial, we can rewrite this as $C^\Imc \subseteq \empty$. It follows that since $\bot^\Imc = \empty$ the every such model satisfies $\Imc \models C \sqsubseteq \bot$, meaning $\Omc \models C \sqsubseteq \bot$. We conclude that we can test for unsatisfiability of a concept $C$ by checking for entailment of $C \sqsubseteq \bot$.
