More work on the background

--- a/sections/b.main/2.background.tex
+++ b/sections/b.main/2.background.tex
@@ -1,3 +1,6 @@
+
+% TODO
+
 \section{The \texorpdfstring{$\SROIQ$}{SROIQ} Description Logic} \label{sroiq-def}
 
 \input{sections/b.main/2.background/1.sroiq.tex}
