--- a/sections/c.back/a.sroiq.tex
+++ b/sections/c.back/a.sroiq.tex
@@ -1,3 +1,6 @@
+
+% TODO
+
 \section{\texorpdfstring{$\SROIQ$}{SROIQ} Syntax} \label{sroiq-syntax}
 
 \input{sections/c.back/a.sroiq/1.sroiq-syn.tex}
