--- a/main.tex
+++ b/main.tex
@@ -1,18 +1,14 @@
 \documentclass[10pt,a4paper]{report}
+\usepackage{amsthm, amsfonts, amsmath, amssymb, mathtools}
+\usepackage{algorithm, algpseudocode, listings}
+\usepackage{sectsty, csquotes, xcolor, xspace}
 \usepackage{graphicx, tabularx}
-\usepackage{amsthm, amsfonts, amsmath, amssymb}
-\usepackage{mathtools}
-\usepackage{sectsty}
-\usepackage[inline]{enumitem}
-\usepackage{csquotes}
-\usepackage{listings}
-\usepackage{xcolor}
-\usepackage{xspace}
 \usepackage[hidelinks]{hyperref}
 \usepackage[capitalise]{cleveref}
+\usepackage[inline]{enumitem}
 \usepackage[english]{babel}
-\usepackage{biblatex}
 \usepackage{libertinus}
+\usepackage{biblatex}
 
 \theoremstyle{plain}
 \newtheorem{theorem}{Theorem}
@@ -39,6 +35,7 @@
 \newcommand{\Omcfull}{\ensuremath{{\mathcal{O}^\textnormal{full}}}\xspace}
 
 \newcommand{\Inf}{{\ensuremath{\mathsf{Inf}}}\xspace}
+\newcommand{\sub}{{\ensuremath{\mathsf{sub}}}\xspace}
 \newcommand{\qual}{{\ensuremath{\mathsf{IIC}}}\xspace}
 \newcommand{\UpC}{{\ensuremath{\mathsf{UpCover}}}\xspace}
 \newcommand{\DownC}{{\ensuremath{\mathsf{DownCover}}}\xspace}
@@ -119,7 +116,7 @@
 
 \input{sections/b.main/5.evaluation.tex}
 
-\chapter{Conclusion and Future Work} \label{conclusion}
+\chapter{Conclusion and Outlook} \label{conclusion}
 
 \input{sections/b.main/6.conclution.tex}
 
@@ -134,5 +131,17 @@
 \chapter{Axiom Weakening in OWL 2 DL} \label{weakening-owl-2-dl}
 
 \input{sections/c.back/b.owl2weakening.tex}
+
+\chapter{Mapping between OWL 2 DL and \SROIQ} \label{owl-to-sroiq}
+
+\input{sections/c.back/c.owl2sroiq.tex}
+
+\chapter{User Guide: Java Axiom Weakening Library} \label{guide-prototype}
+
+\input{sections/c.back/d.prototype.tex}
+
+\chapter{User Guide: Protégé Plugin} \label{guide-plugin}
+
+\input{sections/c.back/e.plugin.tex}
 
 \end{document}
