--- a/sections/c.back/b.owl2weakening.tex
+++ b/sections/c.back/b.owl2weakening.tex
@@ -25,7 +25,7 @@ For OWL 2 DL we must follow the same restrictions, when it comes to regularity a
     \zeta_{\refine, \corefine}(\mathrm{ObjectMinCardinality}(n, r, C)) ={} & \refine (\mathrm{ObjectMinCardinality}(n, r, C)) \\& \cup \{\mathrm{ObjectMinCardinality}(n', r, C) \mid n' \in \; \corefine (n)\} \\& \cup \{\mathrm{ObjectMinCardinality}(n, r', C) \mid r' \in \zeta_{\refine, \corefine}(r)\} \\& \cup \{\mathrm{ObjectMinCardinality}(n, r, C') \mid C' \in \zeta_{\refine, \corefine} (C)\} \\
     \zeta_{\refine, \corefine}(\mathrm{ObjectOneOf}(a_1, \dots, a_n)) ={} & \refine (\mathrm{ObjectOneOf}(a_1, \dots, a_n)) \\
     \text{OWL 2 concepts:} \quad & \\
-    \zeta_{\refine, \corefine}(\mathrm{ObjectExactCardinality}(n, r, C)) ={} & \refine (\mathrm{ObjectExactCardinality}(n, r, C)) \\& \cup \{ \phi_1 \sqcap \phi_2   \mid \phi_1 \in \zeta_{\refine, \corefine} (\mathrm{ObjectMaxCardinality}(n, r, C)) \\ \;& \qquad \land \phi_2 \in \zeta_{\refine, \corefine} (\mathrm{ObjectMinCardinality}(n, r, C)) \} \\
+    \zeta_{\refine, \corefine}(\mathrm{ObjectExactCardinality}(n, r, C)) ={} & \refine (\mathrm{ObjectExactCardinality}(n, r, C)) \\& \cup \{ \alpha_1 \sqcap \alpha_2 \mid \alpha_1 \in \zeta_{\refine, \corefine} (\mathrm{ObjectMaxCardinality}(n, r, C)) \\ \;& \qquad \land \alpha_2 \in \zeta_{\refine, \corefine} (\mathrm{ObjectMinCardinality}(n, r, C)) \} \\
     \zeta_{\refine, \corefine}(\mathrm{ObjectHasValue}(r, a)) ={} & \refine (\mathrm{ObjectHasValue}(r, a)) \\&  \cup \{\mathrm{ObjectHasValue}(r', a) \mid r' \in \zeta_{\refine, \corefine} (r)\} \\&  \cup \{\mathrm{ObjectSomeValuesFrom}(r, A) \mid A \in \zeta_{\refine, \corefine}  (\{a\})\}
 \end{align*}
 }
