Small addition to the alc weakening section

--- a/main.tex
+++ b/main.tex
@@ -57,7 +57,7 @@
 \chaptertitlefont{\huge}
 \interfootnotelinepenalty=10000
 
-\title{Extending Axiom Weakening for Automated Repair of Ontologies in Expressive Description Logics}
+\title{Knowledge Refinement in Expressive Description Logics}
 \author{Roland Bernard}
 \date{July 2023}
 
@@ -104,7 +104,7 @@
 
 \input{sections/b.main/2.background.tex}
 
-\chapter{Theoretical Foundations} \label{theory}
+\chapter{Extending Axiom Weakening} \label{theory}
 
 \input{sections/b.main/3.theory.tex}
 
