--- a/sections/b.main/3.theory/2.rbox.tex
+++ b/sections/b.main/3.theory/2.rbox.tex
@@ -8,7 +8,7 @@ To avoid these complications, we will first consider the simple case of weakenin
 %TODO possible weakening
 \end{example}
 
-\subsection{Weakening role hierarchies in $\mathcal{SROIQ}$} \label{weakening-rbox-SROIQ}
+\subsection{Weakening role hierarchies in $\mathcal{SROIQ}$} \label{weakening-rbox-sroiq}
 
 \begin{example}
 %TODO illegal weakening
