--- a/sections/a.front/acknowledgments.tex
+++ b/sections/a.front/acknowledgments.tex
@@ -1,3 +1,7 @@
-Thanks Mami and Tati!
+I would like to express my deepest gratitude to my two supervisors, Oliver Kutz and Nicolas Troquard, for their invaluable guidance, support, and continuous encouragement throughout the duration of this bachelor thesis. It was through their expertise and guidance that I was able to embark on this research journey. Their insightful suggestions and constructive feedback have been instrumental in shaping the direction of this work. I am particularly grateful for their proposal of the topic and their assistance in submitting a paper to DL 2023, which provided me with invaluable exposure to the research community.
 
-% TODO
+I would also like to extend my sincere appreciation to my fellow students, for their camaraderie, discussions, and shared experiences. Their support, motivation, and willingness to exchange ideas have greatly enriched my academic experience and contributed to the development of this thesis.
+
+Furthermore, I would like to thank my parents and family for their unconditional support, unwavering belief in my abilities, and constant encouragement throughout my academic journey. I am deeply grateful for their understanding and patience.
+
+Finally, I would like to acknowledge the contributions of all the individuals whose work has been utilized in this thesis. Their research, publications, and dedication to their respective fields have provided the foundation upon which this study is built. I am grateful for their commitment to advancing knowledge and their invaluable contributions to the academic community.
